--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,17 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
-
+    packagingOptions {
+        exclude 'META-INF/services/com.fasterxml.jackson.core.JsonFactory'
+        exclude 'META-INF/services/com.fasterxml.jackson.core.ObjectCodec'
+    }
     defaultConfig {
         applicationId "evgen.by.test_task"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -20,9 +24,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile files('libs/picasso-2.5.2.jar')
     compile files('libs/ormlite-core-4.47.jar')
+    compile 'com.android.support:support-v4:23.3.0'
     compile files('libs/ormlite-android-4.47.jar')
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.android.support:recyclerview-v7:23.0.+'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
